# TLS_Analyzer

./: CMakeLists.txt  domain_list.txt
include/: Capture.hpp  DomainManager.hpp  FileLoader.hpp  HttpsClient.hpp  Parser.hpp  SimpleCNN.hpp  TLSDataProcessor.hpp  TLSRecordToCsv.hpp
src/: main.cpp  predictCNN.cpp  trainCNN.cpp
